feat: upload mail templates
